# flet-chatbot

./: .prettierrc.json  LICENSE  README.md  mise.toml  pyproject.toml
src/: __init__.py  app.py
